Adding rune filter

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@
   --main-primary: #92140c;
   --main-primary-light: #c94a34;
   --main-primary-dark: #5e0000;
-  --main-secondary: #4d5055;
-  --main-secondary-light: #797c81;
-  --main-secondary-dark: #25282c;
+  --main-secondary: #c1b4ae;
+  --main-secondary-light: #f4e6e0;
+  --main-secondary-dark: #91847f;
 }
 
 body {
